# ChangeLog for dev-ruby/org-ruby
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/org-ruby/ChangeLog,v 1.7 2015/03/16 19:47:59 graaff Exp $

  16 Mar 2015; Hans de Graaff <graaff@gentoo.org> -org-ruby-0.8.2.ebuild,
  -org-ruby-0.9.0.ebuild, -org-ruby-0.9.7.ebuild:
  Cleanup.

  31 Aug 2014; Hans de Graaff <graaff@gentoo.org> org-ruby-0.9.9.ebuild:
  Version bump.

  30 Aug 2014; Manuel Rüger <mrueg@gentoo.org> org-ruby-0.9.9.ebuild:
  Remove blank line.

*org-ruby-0.9.9 (29 Aug 2014)

  29 Aug 2014; Manuel Rüger <mrueg@gentoo.org> +org-ruby-0.9.9.ebuild:
  Version bump.

*org-ruby-0.9.7 (25 Jul 2014)

  25 Jul 2014; Hans de Graaff <graaff@gentoo.org> +org-ruby-0.9.7.ebuild:
  Version bump. Add ruby20, ruby21.

*org-ruby-0.9.0 (11 Feb 2014)

  11 Feb 2014; Hans de Graaff <graaff@gentoo.org> +org-ruby-0.9.0.ebuild:
  Version bump.

*org-ruby-0.8.2 (13 Dec 2013)

  13 Dec 2013; Manuel Rüger <mrueg@gentoo.org> +metadata.xml,
  +org-ruby-0.8.2.ebuild:
  Import from dev-zero's overlay. Added small changes.