@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/desc/linguas.desc,v 1.89 2015/05/20 04:56:09 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/desc/linguas.desc,v 1.90 2015/05/20 05:04:42 jer Exp $
 
 # This file contains descriptions of LINGUAS USE_EXPAND flags.
 
@@ -174,7 +174,7 @@ nds - Low Saxon locale
 ne - Nepali locale
 nl - Dutch locale
 nl_BE - Dutch locale for Belgium (Flemish)
-nl_NL - Dutch locale for Netherlands
+nl_NL - Dutch locale for the Netherlands
 nn - Nynorsk locale
 nn_NO - Nynorsk locale for Norway
 no - Norwegian locale
