@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/org-ruby
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/org-ruby/ChangeLog,v 1.7 2015/03/16 19:47:59 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/org-ruby/ChangeLog,v 1.8 2015/05/20 05:31:07 graaff Exp $
+
+*org-ruby-0.9.12 (20 May 2015)
+
+  20 May 2015; Hans de Graaff <graaff@gentoo.org> +org-ruby-0.9.12.ebuild:
+  Version bump.
 
   16 Mar 2015; Hans de Graaff <graaff@gentoo.org> -org-ruby-0.8.2.ebuild,
   -org-ruby-0.9.0.ebuild, -org-ruby-0.9.7.ebuild:
